--- a/Services/src/main/resources/webutils/templates/webutils-templates.html
+++ b/Services/src/main/resources/webutils/templates/webutils-templates.html
@@ -516,36 +516,71 @@
 									type="${fieldDef.lovDetails.lovType}" model="${modelField}"></yk-lov-field> 
 					</else-if>
 					<else-if test="context.fieldDef.fieldType == 'FILE'">
-						<div style="width: ${attr('width')};padding: 0px;border: solid 1px rgb(200, 200, 200); border-radius: 0.4em;" yk-file="true">
-							<table style="width: 100%; table-layout: fixed;">
-								<tr>
-									<td style="padding: 0.2em; overflow: hidden; white-space: nowrap;">
-										<div ng-show="${modelField}">
+						<if test="context.fieldDef.multiValued == false">
+							<div style="width: ${attr('width')};padding: 0px;border: solid 1px rgb(200, 200, 200); border-radius: 0.4em;" yk-file="true">
+								<table style="width: 100%; table-layout: fixed;">
+									<tr>
+										<td style="padding: 0.2em; overflow: hidden; white-space: nowrap;">
+											<div ng-show="${modelField}">
+												<a role="button" style="text-decoration: none; font-weight: bold; font-size: 1.2em;" class="fileRemoveButton"  
+															data-toggle="tooltip" title="Remove">
+													<span aria-hidden="true" style="color: red;">&amp;times;</span>
+												</a>
+												<!-- Span when file info comes from server -->
+												<span ng-show="${modelField}.fileName" style="cursor: default;" data-toggle="tooltip" title="{{${modelField}.fileName}}">
+													<a href="#" class="fileLink"> 
+														{{${modelField}.fileName}}
+													</a>
+												</span>
+												<!-- Span when user adds a file -->
+												<span ng-show="${modelField}.name" style="cursor: default;" data-toggle="tooltip" title="{{${modelField}.name}}">
+													{{${modelField}.name}}
+												</span>
+											</div>
+											<!-- Span for place holder -->
+											<span ng-hide="${modelField}" style="color: rgb(200, 200, 200); margin-left: 0.5em;">
+												${fieldDef.label}
+											</span>
+										</td>
+										<td style="width: 2px;padding: 0px;">
+											<button type="button" class="btn btn-primary action-button fileProxy" yk-read-only="${fieldDef.readOnly}" style="padding: 0.3em;">...</button>
+											<input type="file" name="${fieldDef.name}" ng-model="${modelField}" style="display: none;"></input>										
+										</td>
+									</tr>
+								</table>
+							</div>
+						</if>
+						<else>
+							<div style="width: ${attr('width')}; height: 5em; padding: 0px;border: solid 1px rgb(200, 200, 200); border-radius: 0.4em; overflow: auto;" yk-file="true">
+								<table style="width: 100%; table-layout: fixed;">
+									<tr>
+										<td style="text-align: right;">
+											<button type="button" class="btn btn-primary action-button fileProxy" yk-read-only="${fieldDef.readOnly}" style="padding: 0.3em;">...</button>
+											<input type="file" name="${fieldDef.name}" ng-model="${modelField}" style="display: none;" multiple="multiple"></input>										
+										</td>
+									</tr>
+
+									<tr ng-repeat="file in ${modelField}">
+										<td style="padding: 0.2em; overflow: hidden; white-space: nowrap;">
 											<a role="button" style="text-decoration: none; font-weight: bold; font-size: 1.2em;" class="fileRemoveButton"  
-														data-toggle="tooltip" title="Remove">
+														data-toggle="tooltip" title="Remove" file-index="{{$index}}">
 												<span aria-hidden="true" style="color: red;">&amp;times;</span>
 											</a>
 											<!-- Span when file info comes from server -->
-											<span ng-show="${modelField}.fileName">
-												{{${modelField}.fileName}}
+											<span ng-show="file.fileName" style="cursor: default;" data-toggle="tooltip" title="{{file.fileName}}">
+												<a href="#" class="fileLink" file-index="{{$index}}"> 
+													{{file.fileName}}
+												</a>
 											</span>
 											<!-- Span when user adds a file -->
-											<span ng-show="${modelField}.name" style="cursor: default;" data-toggle="tooltip" title="{{${modelField}.name}}">
-												{{${modelField}.name}}
+											<span ng-show="file.name" style="cursor: default;" data-toggle="tooltip" title="{{file.name}}">
+												{{file.name}}
 											</span>
-										</div>
-										<!-- Span for place holder -->
-										<span ng-hide="${modelField}" style="color: rgb(200, 200, 200); margin-left: 0.5em;">
-											${fieldDef.label}
-										</span>
-									</td>
-									<td style="width: 2px;padding: 0px;">
-										<button type="button" class="btn btn-primary action-button fileProxy" yk-read-only="${fieldDef.readOnly}" style="padding: 0.3em;">...</button>
-										<input type="file" name="${fieldDef.name}" ng-model="${modelField}" style="display: none;"></input>										
-									</td>
-								</tr>
-							</table>
-						</div>
+										</td>
+									</tr>
+								</table>
+							</div>
+						</else>
 					</else-if>
 					<else>
 						<exe-script var="_tmp1">
@@ -686,6 +721,23 @@
 		</script>
 	</attr-directive>
 
+	<!--
+		Expected to be used as part of file widget. This is used on file's individula remove
+		button. And deletes the corresponding file 
+	 -->
+	<attr-directive name="yk-file-delete">
+		<script>
+			var fileRemoveButton = context.element;
+			var showExpr = context.attributeValue;
+			
+			$(fileRemoveButton).off("click").on("click", $.proxy(function(event){
+				//eval("this.$scope." + this.modelName + " = null");
+				console.log(event);			
+				//this.$scope.$digest();
+			}, {"element": fileRemoveButton, "$scope" : context.$scope, "actionHelper" : context.actionHelper, "modelName": modelName}));
+		</script>
+	</attr-directive>
+
 	<attr-directive name="ykFile">
 		<script>
 			var fileElem = context.element.find("input[type='file']").get(0);
@@ -705,7 +757,7 @@
 			var modelName = fileElem.attr("ng-model");
 			modelName = (!modelName || modelName.length == 0) ? name : modelName;
 
-			var isMultiple = (fileElem.attr('multiple') == 'true');
+			var isMultiple = (fileElem.attr('multiple') == 'multiple');
 			
 			var eventContent = {
 				"$scope" : context.$scope,
@@ -715,12 +767,21 @@
 			};
 			
 			//add functionality for remove button
-			var fileRemoveButton = context.element.find("a.fileRemoveButton").get(0);
-			$(fileRemoveButton).off("click").on("click", $.proxy(function(){
-				eval("this.$scope." + this.modelName + " = null");
-								
-				this.$scope.$digest();
+			var fileRemoveButton = context.element.find("a.fileRemoveButton");
+			
+			$(fileRemoveButton).off("click").on("click", $.proxy(function(event){
+				//eval("this.$scope." + this.modelName + " = null");
+				console.log(event);			
+				//this.$scope.$digest();
 			}, eventContent));
+			
+			//add functionality for file link 
+			var fileLink = context.element.find("a.fileLink").get(0);
+			
+			$(fileLink).off("click").on("click", $.proxy(function(event){
+				//var fileId = eval("this.$scope." + this.modelName + ".id");
+				//this.element.href = this.actionHelper.actionUrl("files.fetch.attachment", {"id": fileId});
+			}, {"element": fileLink, "$scope" : context.$scope, "actionHelper" : context.actionHelper, "modelName": modelName}));
 			
 			//add event, such that when file selection is done, the files are added to model
 			fileElem.off("change").on('change', $.proxy(function(){
@@ -758,6 +819,20 @@
 				
 				this.$scope.$digest();
 			}, eventContent));
+		</script>
+	</attr-directive>
+
+	<attr-directive name="ykFileLink">
+		<script>
+			//get ng-model name
+			var modelName = context.attributeValue;
+
+			var fileLink = context.element;
+			
+			$(fileLink).off("click").on("click", $.proxy(function(){
+				var fileId = eval("this.$scope." + this.modelName + ".id");
+				this.element.href = this.actionHelper.actionUrl("files.fetch.attachment", {"id": fileId});
+			}, {"element": fileLink, "$scope" : context.$scope, "actionHelper" : context.actionHelper, "modelName": modelName}));
 		</script>
 	</attr-directive>
 
