Multi file support completed

--- a/Services/src/main/resources/webutils/css/webutils.css
+++ b/Services/src/main/resources/webutils/css/webutils.css
@@ -16,6 +16,27 @@
 	display: inline;
 }
 
+.delButtonLink
+{
+	color: red;
+	font-weight: bold;
+	text-decoration: none;
+	font-size: 1.2em;
+}
+
+.delButtonLink > span
+{
+	color: red;
+	margin-left: 0.2em;
+	margin-right: 0.2em;
+}
+
+.delButtonLink:hover, .delButtonLink:visited, .delButtonLink:link, .delButtonLink:active
+{
+	background-color: rgb(235, 235, 235);
+	text-decoration: none;
+}
+
 .yk-dropdown-header
 {
 	border-bottom: 2px solid #f0f0f0;
