--- a/Services/src/main/resources/webutils/templates/webutils-templates.html
+++ b/Services/src/main/resources/webutils/templates/webutils-templates.html
@@ -522,9 +522,9 @@
 									<tr>
 										<td style="padding: 0.2em; overflow: hidden; white-space: nowrap;">
 											<div ng-show="${modelField}">
-												<a role="button" style="text-decoration: none; font-weight: bold; font-size: 1.2em;" class="fileRemoveButton"  
-															data-toggle="tooltip" title="Remove">
-													<span aria-hidden="true" style="color: red;">&amp;times;</span>
+												<a role="button" yk-file-delete="-1" model-name="${modelField}"
+															data-toggle="tooltip" title="Remove" class="delButtonLink">
+													<span aria-hidden="true">&amp;times;</span>
 												</a>
 												<!-- Span when file info comes from server -->
 												<span ng-show="${modelField}.fileName" style="cursor: default;" data-toggle="tooltip" title="{{${modelField}.fileName}}">
@@ -551,34 +551,41 @@
 							</div>
 						</if>
 						<else>
-							<div style="width: ${attr('width')}; height: 5em; padding: 0px;border: solid 1px rgb(200, 200, 200); border-radius: 0.4em; overflow: auto;" yk-file="true">
-								<table style="width: 100%; table-layout: fixed;">
-									<tr>
-										<td style="text-align: right;">
-											<button type="button" class="btn btn-primary action-button fileProxy" yk-read-only="${fieldDef.readOnly}" style="padding: 0.3em;">...</button>
-											<input type="file" name="${fieldDef.name}" ng-model="${modelField}" style="display: none;" multiple="multiple"></input>										
-										</td>
-									</tr>
-
-									<tr ng-repeat="file in ${modelField}">
-										<td style="padding: 0.2em; overflow: hidden; white-space: nowrap;">
-											<a role="button" style="text-decoration: none; font-weight: bold; font-size: 1.2em;" class="fileRemoveButton"  
-														data-toggle="tooltip" title="Remove" file-index="{{$index}}">
-												<span aria-hidden="true" style="color: red;">&amp;times;</span>
+							<div style="width: ${attr('width')}; padding: 0px;border: solid 1px rgb(200, 200, 200); border-radius: 0.4em;" yk-file="true">
+								<!-- Title bar -->
+								<div style="width: 100%;border-bottom: solid 1px rgb(200, 200, 200); padding: 0px; font-size: 0.8em;">
+									<table style="width: 100%">
+										<tr>
+											<td style="text-align: left; color: rgb(200, 200, 200); padding-left: 0.2em;">
+												${fieldDef.label}
+											</td>
+											<td style="text-align: right;">
+												<button type="button" class="btn btn-primary action-button fileProxy" 
+													yk-read-only="${fieldDef.readOnly}" style="padding: 0.3em; font-size: 0.8em;">...</button>
+												<input type="file" name="${fieldDef.name}" ng-model="${modelField}" style="display: none;" multiple="multiple"></input>										
+											</td>
+										</tr>
+									</table>
+								</div>
+								<!-- File contents -->
+								<div style="overflow: auto; height: 4em;">
+									<div ng-repeat="file in ${modelField}" style="white-space: nowrap; padding: 0px; margin: 0px; font-size: 0.8em;">
+										<a role="button" class="delButtonLink" yk-file-delete="{{$index}}" model-name="${modelField}"  
+													data-toggle="tooltip" title="Remove" file-index="{{$index}}">
+											<span aria-hidden="true" style="color: red;">&amp;times;</span>
+										</a>
+										<!-- Span when file info comes from server -->
+										<span ng-show="file.fileName" style="cursor: default;" data-toggle="tooltip" title="{{file.fileName}}">
+											<a href="#" class="fileLink"> 
+												{{file.fileName}}
 											</a>
-											<!-- Span when file info comes from server -->
-											<span ng-show="file.fileName" style="cursor: default;" data-toggle="tooltip" title="{{file.fileName}}">
-												<a href="#" class="fileLink" file-index="{{$index}}"> 
-													{{file.fileName}}
-												</a>
-											</span>
-											<!-- Span when user adds a file -->
-											<span ng-show="file.name" style="cursor: default;" data-toggle="tooltip" title="{{file.name}}">
-												{{file.name}}
-											</span>
-										</td>
-									</tr>
-								</table>
+										</span>
+										<!-- Span when user adds a file -->
+										<span ng-show="file.name" style="cursor: default;" data-toggle="tooltip" title="{{file.name}}">
+											{{file.name}}
+										</span>
+									</div>
+								</div>
 							</div>
 						</else>
 					</else-if>
@@ -722,19 +729,35 @@
 	</attr-directive>
 
 	<!--
-		Expected to be used as part of file widget. This is used on file's individula remove
+		Expected to be used as part of file widget. This is used on file's individual remove
 		button. And deletes the corresponding file 
 	 -->
-	<attr-directive name="yk-file-delete">
+	<attr-directive name="ykFileDelete">
 		<script>
 			var fileRemoveButton = context.element;
-			var showExpr = context.attributeValue;
+			var modelName = context.attr('model-name');
 			
 			$(fileRemoveButton).off("click").on("click", $.proxy(function(event){
-				//eval("this.$scope." + this.modelName + " = null");
-				console.log(event);			
-				//this.$scope.$digest();
-			}, {"element": fileRemoveButton, "$scope" : context.$scope, "actionHelper" : context.actionHelper, "modelName": modelName}));
+				var index = parseInt(this.element.attr("yk-file-delete"));
+
+				//if this button is for single file widget
+				if(index &lt; 0)
+				{
+					eval("this.$scope." + this.modelName + " = null");
+					this.$scope.$digest();
+				}
+				//for multi file widget
+				else
+				{
+					//remove current element
+					var files = eval("this.$scope." + this.modelName);
+					files.splice(index, 1);
+					
+					eval("this.$scope." + this.modelName + " = files");
+					this.$scope.$parent.$digest();
+				}
+				
+			}, {"element": fileRemoveButton, "$scope" : context.$scope, "modelName": modelName, "element": context.element}));
 		</script>
 	</attr-directive>
 
@@ -765,15 +788,6 @@
 				"modelName": modelName,
 				"isMultiple": isMultiple
 			};
-			
-			//add functionality for remove button
-			var fileRemoveButton = context.element.find("a.fileRemoveButton");
-			
-			$(fileRemoveButton).off("click").on("click", $.proxy(function(event){
-				//eval("this.$scope." + this.modelName + " = null");
-				console.log(event);			
-				//this.$scope.$digest();
-			}, eventContent));
 			
 			//add functionality for file link 
 			var fileLink = context.element.find("a.fileLink").get(0);
